Typos & Schönheitsfehler korrigiert

--- a/Anrufung.tex
+++ b/Anrufung.tex
@@ -1,7 +1,7 @@
 % \begin{refsection}
 \chapterpreamble{Trifft eine Anrufung beim Schiedsgericht ein, ist zu prüfen ob der Antragsteller antragsberechtigt ist (\S~8 Abs.~1 SGO\nomenclature{SGO}{Schiedsgerichtsordnung (Abschnitt~C der Bundessatzung)}) und ob die Anrufung formell vollständig ist (\S~8 Abs.~3 SGO). Die fristgerechte Klageerhebung ist bereits im Rahmen der Anrufung zu prüfen. Nur bei Zweifeln, die sich nicht ohne Ermittlungen klären lassen, ist das Verfahren zu eröffnen. Die Anschrift i.S.d. \S~8 Abs.~3 S.~1 SGO kann auch aus einer Postfachadresse bestehen.}
 
-\chapter{Schema für den Standardworkflow \enquote{Ich habe eine Anrufung erhalten}}
+\chapter{Die Anrufung}
 \label{Anrufung}
 Ein Schiedsgericht wird nur auf Anrufung tätig schreibt die SGO in \S~8 Abs.~1 S.~1 vor.
 Damit ist die Anrufung der zentrale Punkt für ein Schiedsgericht, an dem jede Tätigkeitkeit anknüpft.
@@ -119,14 +119,14 @@ Bei der Prüfung, ob Anträge gestellt wurden, ist also eine sehr strenger Maßs
 Ob der Antrag erfüllbar ist und rechtmäßig gestellt wurde, wird allerdings hier noch nicht entschieden.
 Insofern ist es auch nur eine sehr formale und eingschränkte Prüfung, ob einer oder mehrere Anträge gestellt wurden.
 
-Und natürlich reicht entgegen der Pluralformulierung von \S~8 Abs.~3 Nr.~3 SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3} ein einzelner Antrag auch aus. Es ist nicht Sinn und Zwekc der Regelung, dass ein Antragsteller, der nur eine einzelne Sache erreichen will, einen absolut unnötigen zusätzlichen Antrag stellt und das Schiedsgericht so mit Mehrarbeit belastet oder gar schon überhaupt nicht klagen darf, nur weil er nur eine Sache erreichen will.
+Und natürlich reicht entgegen der Pluralformulierung von \S~8 Abs.~3 Nr.~3 SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3} ein einzelner Antrag auch aus. Es ist nicht Sinn und Zweck der Regelung, dass ein Antragsteller, der nur eine einzelne Sache erreichen will, einen absolut unnötigen zusätzlichen Antrag stellt und das Schiedsgericht so mit Mehrarbeit belastet oder gar schon überhaupt nicht klagen darf, nur weil er nur eine Sache erreichen will.
 
 \subsection{Begründung und Umstände}
 \label{Anrufung:Statthaftigkeit:Gruende}
 Die letzte Anforderung des \S~8 Abs.~3 SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3} sind eine Darstellung der Umstände und Schilderung einer Begründung der Anträge.
 Damit soll dem Schiedsgericht ein Anhaltspunkt für seine Amtsermittlung des Sachverhaltes nach \S~10 Abs.~1 S.~1 Hs.~1 SGO\index[paridx]{SGO!10@\S~10!1@Abs.~1} gegeben werden und dem Antragsgegner eine Möglichkeit, auf die Klage zu erwiedern.
 Der Sinn und Zweck dieser Anforderung ist also, einen Startpunkt für das Verfahren haben, und den Streit der Parteien einsortieren zu können.
-Entsprechend sind an keine hohen inhaltlichen Anforderungen zu stellen.
+Entsprechend sind hieran keine hohen inhaltlichen Anforderungen zu stellen.
 Solange ein Geschehen geschildert wird und irgendwelche Argumente angeführt werden, warum diese oder jene rechtliche Bewertung dafür zu gelten habe, ist regelmäßig anzunehmen, dass diese Punkt erfüllt ist.
 Andernfalls würde \S~8 Abs.~3 Nr.~4 SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3} eine Vorwegnahme der eigentlichen Beurteilung des Verfahrens darstellen, dass das Gericht erst nach ausführlicher Beschäftigung mit der Sache selbst durch die Durchführung des Verfahrens tätigen soll.
 
@@ -138,7 +138,7 @@ Die Satzung nennt diese Kriterien auch Zulässigkeitskriterien der Eröffnung, v
 
 \subsection{Antragsbefugnis}
 \label{Anrufung:Kriterien:Antragsbefugnis}
-Die Notwendigkeit der Antragsbefugnis geht aus \S~8 Abs.~1 SGO\index[paridx]{SGO!8@\S~8!1@Abs.~1} hervor und soll sogenannte Popularklagen verhinden.
+Die Notwendigkeit der Antragsbefugnis geht aus \S~8 Abs.~1 SGO\index[paridx]{SGO!8@\S~8!1@Abs.~1} hervor und soll sogenannte \emph{Popularklagen} verhinden.
 Eine Antragsbefugnis liegt dann vor, wenn der Antragsteller selbst in seinen eigenen Rechten aus der Mitgliedschaft oder seinem sonstigen innerparteilichen Status verletzt ist oder ein Anspruch aus dieser Position nicht erfüllt wird.
 Die Abgrenzung von eigenen Rechten und eigenen Ansprüchen ist nicht immer einfach, aber auch nicht zwingend nötig, da Alternativ eines von beides ausreicht.
 Entsprechend den anderen nicht rein förmlichen Anrufungskriterien ist hier kein hoher inhaltlicher Anspruch zu stellen.
@@ -153,8 +153,8 @@ Die Antragsbefugnis ist damit ein echtes Zulässigkeitskriterium und erst nach d
 \label{Anrufung:Kriterien:Form}
 Die Anforderungen an die Form der Anrufung sind sehr gering.
 Es wird in \S~8 Abs.~3 SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3} lediglich die Textform gefordert.
-Im Gegensatz zur Schriftform, deren Erfüllung und Nichterfüllung bei untergesetzlicher vorgeschriebener Formerfordernis sehr strittig ist und auch in der Schiedsgerichtsbarkeit der Piratenpartei schon zu Entscheidungen führte\footcite{LSGBB146}, ist die Textform ausreicht klar und eindeutig in \S~126b BGB\index[paridx]{BGB!\S~126b} definiert und eine Formlockerung in \S~127 BGB\index[paridx]{BGB!\S~127} nicht vorgesehen.
-Es reicht daher ein Schreiben, das mit dem Namen unterzeichnet ist und das in einer Form, die zur visuellen Widergabe des Inhalts geeignet ist.
+Im Gegensatz zur Schriftform, deren Erfüllung und Nichterfüllung bei untergesetzlich vorgeschriebener Formerfordernis sehr strittig ist und auch in der Schiedsgerichtsbarkeit der Piratenpartei schon zu Entscheidungen führte,\footcite{LSGBB146} ist die Textform ausreicht klar und eindeutig in \S~126b BGB\index[paridx]{BGB!\S~126b} definiert und eine Formlockerung in \S~127 BGB\index[paridx]{BGB!\S~127} nicht vorgesehen.
+Es reicht daher ein Schreiben, das mit dem Namen unterzeichnet ist und das in einer Form, die zur visuellen Widergabe des Inhalts geeignet ist (also auch z.B. eine E-Mail).
 
 \subsection{Frist}
 \label{Anrufung:Kriterien:Frist}
@@ -165,21 +165,21 @@ Daher darf nach Ablauf dieser Frist nicht mehr geklagt werden und eine Anrufung,
 
 Dabei kennt die SGO unterschiedliche Anrufungsfristen.
 \begin{enumerate}
-\item Die Standardanrufungsfrist von 2 Monaten, \S~8 Abs.~4 Satz~1 SGO\index[paridx]{SGO!8@\S~8!4@Abs.~4}
-\item Die Anrufungsfrist in Einspruchsverfahren gegen Ordnungsmaßnahmen von 14 Tagen, \S~8 Abs.~4 Satz~2 SGO\index[paridx]{SGO!8@\S~8!4@Abs.~4}
-\item Die Anrufungsfrist in Parteiausschlussverfahren, \S~8 Abs.~4 Satz~3 SGO\index[paridx]{SGO!8@\S~8!4@Abs.~4}
-\item Die Berufungsfrist gegen ein Urteil mit korrekter Rechtsmittelbelehrung, \S~13 Abs.~2 Satz~1 SGO\index[paridx]{SGO!13@\S~13!2@Abs.~2}
-\item Die Berufungfrist gegen ein Urteil ohne korrekte Rechtsmittelbelehrung, \S~13 Abs.~2 Satz~4 SGO\index[paridx]{SGO!13@\S~13!2@Abs.~2}
+\item Die Standardanrufungsfrist von 2 Monaten, \S~8 Abs.~4 Satz~1 SGO,\index[paridx]{SGO!8@\S~8!4@Abs.~4}
+\item Die Anrufungsfrist in Einspruchsverfahren gegen Ordnungsmaßnahmen von 14 Tagen, \S~8 Abs.~4 Satz~2 SGO,\index[paridx]{SGO!8@\S~8!4@Abs.~4}
+\item Die Anrufungsfrist in Parteiausschlussverfahren, \S~8 Abs.~4 Satz~3 SGO,\index[paridx]{SGO!8@\S~8!4@Abs.~4}
+\item Die Berufungsfrist gegen ein Urteil mit korrekter Rechtsmittelbelehrung, \S~13 Abs.~2 Satz~1 SGO,\index[paridx]{SGO!13@\S~13!2@Abs.~2}
+\item Die Berufungfrist gegen ein Urteil ohne korrekte Rechtsmittelbelehrung, \S~13 Abs.~2 Satz~4 SGO.\index[paridx]{SGO!13@\S~13!2@Abs.~2}
 \end{enumerate}
 
 Die Ausnahme stellt hier die Anrufungsfrist im Parteiausschlussverfahren dar.
 Diese ist keine formelle Frist wie die anderen Fristen dar, sondern ist eine wertende, materielle Präklusionsfrist.
 Das bedeutet, dass über die fristgerechte Einbringung der Vorwürfe nicht schon mit Eröffnung zu bescheiden ist, sondern erst im Urteil nach durchlaufenem Verfahren.
-Dies soll einerseits das Parteimitglied dagegen schützen, dass es sich gegen alte Vorwürfe schützen muss und andererseits ein Parteiausschlussverfahren auch dann noch ermöglichen, wenn einzelne Handlungen schon länger zurück liegen, aber Teil eines Großen und Ganzen sind, das einen einzigen, fortlaufende Gesamtverstoß gegen Satzung, Grundsätze oder Ordnung der Partei mit schwerem Schaden darstellt.\footnote{Zur Zulässigkeit des Parteiausschlusses aufgrund eines solchen Gesamtverstoßes \cite[S.~19]{LSGHE20130624} mwN\nomenclature{mwN}{mit weiteren Nachweisen} und später bestätigend \cite{BSG20131028}.}
+Dies soll einerseits das Parteimitglied dagegen schützen, dass es sich gegen alte Vorwürfe schützen muss und andererseits ein Parteiausschlussverfahren auch dann noch ermöglichen, wenn einzelne Handlungen schon länger zurück liegen, aber Teil eines Großen und Ganzen sind, das einen einzigen, fortlaufende Gesamtverstoß gegen Satzung, Grundsätze oder Ordnung der Partei mit schwerem Schaden darstellt.\footnote{Zur Zulässigkeit des Parteiausschlusses aufgrund eines solchen Gesamtverstoßes \cite[S.~19]{LSGHE20130624} m.w.N.\nomenclature{m.w.N.}{mit weiteren Nachweisen} und später bestätigend \cite{BSG20131028}.}
 Alle anderen genannten Fristen sind dagegen echte formelle Fristen die schon die Eröffnung eines Verfahrens verhindern sollen.
 
 Die Fristberechnung folgt dabei den \SSS~186 ff. BGB\index[paridx]{BGB!186@\S~186}.
-Der Fristanfang wird nach \S~187 Abs.~1BGB\index[paridx]{BGB!187@\S~187 Abs.~1} bestimmt, das Fristende nach \S~188 BGB\index[paridx]{BGB!188@\S~188}.
+Der Fristanfang wird nach \S~187 Abs.~1~BGB\index[paridx]{BGB!187@\S~187 Abs.~1} bestimmt, das Fristende nach \S~188 BGB\index[paridx]{BGB!188@\S~188}.
 Das ist auch der Grund, warum in der Schiedsgerichtsordnung eine Ladungsfrist für (fern-)mündliche Verhandlungen in \S~10 Abs.~5 Satz~2 SGO\index[paridx]{SGO!10@\S~10!5@Abs.~5} auf 13 Tage gesetzt ist und nicht etwa 14 Tage oder zwei Wochen.
 So kann das Schiedsgericht in seiner Sitzung einen Verhandlungstermin beschließen und wenn es am selben Tag noch zur Verhandlung lädt, kann diese am selben Wochentag in der zweiten Woche danach stattfinden und nicht erst in der dritten Woche danach.
 
@@ -240,13 +240,13 @@ Das Vertrauen darauf, dass grundsätzlich nur die Organe der Gliederungen, in de
 
 \subsection{Schlichtung}
 \label{Anrufung:Kriterien:Schlichtung}
-Nach \S~7 Abs.~1 SGO\index[paridx]{SGO!7@\S~7!1@Abs.~1} ist eine Schlichtung vor der Anrufung der Schiedsgerichtsbarkeit grundsätzlich erforderlich. Damit ist die Schlichtung wie auch die Zuständigkeit (siehe \ref{Anrufung:Kriterien:Zustaendigkeit}) ein besonderes unechtes Zulässigkeitskriterium: Diese Kriterien würden in den staatlichen Gerichtsordnungen als echte Zulässigkeitskriterien von nicht bloß formaler Natur zu einem Unzulässigkeitsurteil führen. Nach der SGO aber führen sie zu einer Nichteröffnung und sind entsprechend zum Zeitpunkt der Eröffnung abschließend zu beurteilen.
+Nach \S~7 Abs.~1 SGO\index[paridx]{SGO!7@\S~7!1@Abs.~1} ist eine Schlichtung vor der Anrufung der Schiedsgerichtsbarkeit grundsätzlich erforderlich. Damit ist die Schlichtung wie auch die Zuständigkeit (siehe \ref{Anrufung:Kriterien:Zustaendigkeit}) ein besonderes \emph{unechtes Zulässigkeitskriterium}: Diese Kriterien würden in den staatlichen Gerichtsordnungen als \emph{echte Zulässigkeitskriterien} von nicht bloß formaler Natur zu einem Unzulässigkeitsurteil führen. Nach der SGO aber führen sie zu einer Nichteröffnung und sind entsprechend zum Zeitpunkt der Eröffnung abschließend zu beurteilen.
 
 Fehlt es an einem erfolglosen Schlichtungsversuch und ist dieser auch nicht entbehrlich, fehlt der anrufenden Streitpartei das Rechtsschutzinteresse und die Klage ist als unzulässig mit einer Nichteröffnung abzuweisen.
 
 \subsubsection{Ablauf}
 \label{Anrufung:Kriterien:Schlichtung:Ablauf}
-Die Schlichtung wird von den Parteien eigenständig durchgeführt, \S~7 Abs.~2 Satz~1 SGO\index[paridx]{SGO!7@\S~7!2@Abs.~2}
+Die Schlichtung wird von den Parteien eigenständig durchgeführt, \S~7 Abs.~2 Satz~1 SGO.\index[paridx]{SGO!7@\S~7!2@Abs.~2}
 Daher ist der Ablauf nicht im Verantwortungs- oder Tätigkeitsbereich der Parteischiedsgerichte.
 
 \subsubsection{Auswirkungen}
@@ -254,13 +254,13 @@ Daher ist der Ablauf nicht im Verantwortungs- oder Tätigkeitsbereich der Partei
 Die erfolglose Schlichtung ist Anrufungsvoraussetzung. Da eine Schlichtung auch Zeit in Anspruch nehmen kann, wird die Anrufungsfrist (vgl. \ref{Anrufung:Kriterien:Frist}) in der Zeit, in der eine Schlichtung versucht wird, gehemmt, \S~8 Abs.~4 Satz~4 SGO\index[paridx]{SGO!8@\S~8!4@Abs.~4}.
 
 Das eröffnende Schiedsgericht muss also feststellen, ob ein erfolgloser Schlichtungsversuch unternommen wurde.
-Eine Schlichtung ist das ernsthafte Bemühen, auf konstruktivem Wege eine gütliche Einigung in einem Streit zu erreichen.\footnote{vgl. Kommentierung des \S~7 SGO von Benjamin Siggel, \href{https://wiki.piratenpartei.de/Bundesschiedsgericht/Schlichtung}{https://wiki.piratenpartei.de/Bundesschiedsgericht/Schlichtung}.}
+Eine Schlichtung ist das ernsthafte Bemühen, auf konstruktivem Wege eine gütliche Einigung in einem Streit zu erreichen.\footnote{Vgl. Kommentierung des \S~7 SGO von Benjamin Siggel, \href{https://wiki.piratenpartei.de/Bundesschiedsgericht/Schlichtung}{https://wiki.piratenpartei.de/Bundesschiedsgericht/Schlichtung}.}
 Das kann bereits erfüllt sein, wenn sich eine Partei der Schlichtung verweigert oder diese immer wieder verzögert.
 
 
 \subsubsection{Entbehrlickeit}
 \label{Anrufung:Kriterien:Schlichtung:Entbehrlickeit}
-Die Schlichtung ist nach \S~7 Abs.~3 Satz 1 SGO\index[paridx]{SGO!7@\S~7!3@Abs.~3} entbehrlich, wenn es sich im Disziplinarverfahren (Einspruch gegen eine Ordnungsmaßnahme, Parteiausschluss) handelt, es ein Rechsmittelverfahren ist oder ein Fall der Eilbedürftigkeit des Verfahrens, die Aussichtslosigkeit oder des Scheiterns der Schlichtung vorliegt.
+Die Schlichtung ist nach \S~7 Abs.~3 Satz 1 SGO\index[paridx]{SGO!7@\S~7!3@Abs.~3} entbehrlich, wenn es sich um Disziplinarverfahren (Einspruch gegen eine Ordnungsmaßnahme, Parteiausschluss) handelt, es ein Rechsmittelverfahren ist oder ein Fall der Eilbedürftigkeit des Verfahrens, die Aussichtslosigkeit oder des Scheiterns der Schlichtung vorliegt.
 
 Für Disziplinarverfahren ist anzunehmen, dass eine Schlichtung zwingend scheitert. Daher macht eine Pflicht zum Schlichtungsversuch hier ebensowenig Sinn wie in Rechtsmittelverfahren, die sich auf ein Schiedsgerichtsverfahren beziehen. 
 
@@ -270,7 +270,7 @@ Andere Fälle der Eilbedürftigkeit dürften kaum eintreten.
 Die Aussichtslosigkeit oder das Scheitern der Schlichtung unterscheiden sich lediglich dadurch, ob bereits ein Schlichtungsversuch unternommen wurde, oder aber eben dieser gar nicht unternommen wurde, weil er schon gar keine Aussicht auf Erfolg hat. Dabei unterliegt die Wertung des Einzelfalls dem Ermessen der Richter. Aussichtlos dürfte eine Schlichtung immer dann sein, wenn eine Partei in Bezug auf einen konkreten Streit schon von vorn herein ankündigt, für eine Schlichtung nicht zur Verfügung zu stehen, oder wenn es um reine Rechtsfragen wie im Falle des \S~14 Abs.~1 Satz~1 Var.~2 PartG\index[paridx]{PartG!14@\S~14!1@Abs.~1} geht.
 
 Die Entscheidung eines Schiedsgerichts, ob ein solcher Fall vorliegt, ist nach \S~7 Abs.~3 Satz 2 SGO\index[paridx]{SGO!7@\S~7!3@Abs.~3} nicht anfechtbar. Grundsätzlich sind hier zwei Auslegungen denkbar. Erstens eine weite Auslegung: Jede Entscheidung über Satz~1 ist unanfechtbar, eine Nichteröffnungsbeschwerde könnte sich dann nicht gegen eine Feststellung der Erforderlichkeit der Schlichtung in diesem Verfahren richten und zweitens eine enge Auslegung: Nur positive Feststellungen der Entbehrlichkeit der Schlichtung sind unanfechtbar, eine Berufung gegen das Urteil im eröffneten Verfahren könnte sich dann nicht mehr darauf berufen, dass das Verfahren wegen eines erforderlichen, aber nicht erfolgten Schlichtungsversuches gar nicht hätte eröffnet werden dürfen.
-Das Bundesschiedsgericht hat in seiner Rechtsprechung bisher die enge Auslegung angewendet\footnote{vgl. etwa \cites{BSG914H1}{BSG3014HS}.}, ohne dies näher zu begründen.
+Das Bundesschiedsgericht hat in seiner Rechtsprechung bisher die enge Auslegung angewendet,\footnote{Vgl. etwa \cites{BSG914H1}{BSG3014HS}.} ohne dies näher zu begründen.
 Das ist auch korrekt: Die Schlichtungserfordernis soll lediglich in den Fällen, in denen eine Schlichtung besser geeignet ist, den Rechtsfrieden wiederherzustellen, dieser den Vorrang geben und nicht jeglichen Rechtsschutz verhindern.
 Daher ist die Hürde nicht zu hoch zu setzen, wenn das Eingangsgericht fälschlich das Vorliegen dieses Verfahrenserfordernisses verneint, ist dagegen Rechtsschutz zu gewähren. Der Sinn und Zweck des Vorrangs des Schlichtungserfordernisses ist nicht gefährdet, wenn das Rechtsmittelgericht dessen Entbehrlichkeit feststellt und das Verfahren eröffnet. Das Gebot des effektiven Rechtsschutzes stützt also diese enge Auslegung. Der Sinn und Zweck der Nichtanfechtbarkeit besteht also lediglich in dem Vertrauensschutz in das Bestehen des Verfahrenserfordernisses nach Eröffnung, damit nicht nachträglich ein Verfahrenserfordernis entzogen werden kann.
 
@@ -278,7 +278,7 @@ Daher ist die Hürde nicht zu hoch zu setzen, wenn das Eingangsgericht fälschli
 \label{Anrufung:Beschluss}
 Nach der Prüfung aller dargelegten Kriterien ist über die Eröffnung zu bescheiden.
 Dabei ist relevant, sich für jedes Kritrium und seine Bestimmungen einzeln anzusehen, um festzustellen, welche Anforderungen für die Eröffnung vorliegen müssen und welche Kriterien erst für das Endurteil vorliegen müssen.
-Grundsätzlich gilt dabei: Die Fakten müssen vollständig zutreffen, aber die Informationen über diese Fakten können in einigen Fällen noch während des Verfahrens nachgeliefert werden. Und zwar ist ein solcher Nachtrag von Fakten immer möglich, wenn es teil der Verhandlung ist, ebendiese Informationen zu ermitteln. Das ist damit auch das Unterscheidungskriterium zwischen unechten Zulässigkeitskriterien, die bereits mit Eröffnung zu entscheiden sind, und echten Zulässigkeitskriterien, die erst im Prozessurteil beschieden werden müssen. Das Musterbeispiel für einen solchen Nachtrag dürften Informationen über Sachverhalt und Begründung der Klage sein, deren Ermittlung ja gerade Haupttätigkeit im Verfahren ist. Mit anderen Worten: Alle Entscheidungen, die zwnagsläufig auf Ermittlung und Wertungen des Gerichts und dem Vortrag der Streitparteien beruhen, sind im Zweifel echte Zulässigkeitsvorraussetzungen und erst mit dem Endurteil zu bescheiden.
+Grundsätzlich gilt dabei: Die Fakten müssen vollständig zutreffen, aber die Informationen über diese Fakten können in einigen Fällen noch während des Verfahrens nachgeliefert werden. Und zwar ist ein solcher Nachtrag von Fakten immer möglich, wenn es Teil der Verhandlung ist, ebendiese Informationen zu ermitteln. Das ist damit auch das Unterscheidungskriterium zwischen unechten Zulässigkeitskriterien, die bereits mit Eröffnung zu entscheiden sind, und echten Zulässigkeitskriterien, die erst im Prozessurteil beschieden werden müssen. Das Musterbeispiel für einen solchen Nachtrag dürften Informationen über Sachverhalt und Begründung der Klage sein, deren Ermittlung ja gerade Haupttätigkeit im Verfahren ist. Mit anderen Worten: Alle Entscheidungen, die zwnagsläufig auf Ermittlung und Wertungen des Gerichts und dem Vortrag der Streitparteien beruhen, sind im Zweifel echte Zulässigkeitsvorraussetzungen und erst mit dem Endurteil zu bescheiden.
 
 \subsection{Nachbesserung}
 \label{Anrufung:Beschluss:Nachbesserung}
@@ -287,15 +287,15 @@ Die anrufende Partei sollte dabei möglichst genau auf die fehlenden Angaben hin
 Allerdings ist besonders auf die Frist zu achten.
 Eine im Zeitpunkt der Verfristung unvollständige Anrufung ist unheilbar verfristet.
 Daher ist eine Anrufung, die fristgerecht, aber unvollständig einging, und deren Anrufungsfrist vor einer Antwort durch das Gericht abgelaufen ist, nicht mit einer Nachbesserungsaufforderung zu beantworten, sondern mit einem Nichteröffnungsbeschluss.
-Eine Ausnahme besteht dann, wenn sich die Frist aus dem vorgetragenen nicht berechnen lässt.
+Eine Ausnahme besteht dann, wenn sich die Frist aus dem Vorgetragenen nicht berechnen lässt.
 Das ist typischerweise der Fall, wenn eine schlichtungspflichtige Anrufung vorliegt, aber Angaben zur Schlichtung und ihrem Umfang v.a. in zeitlicher Hinsicht fehlen.
 In diesem Fall kann wegen der Hemmungswirkung der Schlichtung die Frist nicht berechnet werden, daher bietet sich hier zunächst eine Nachbesserungsaufforderung an.
 
 Die Nachbesserung ist in der Schiedsgerichtsordnung nicht erwähnt.
 Dennoch sollten Schiedsgerichte der anrufenden Partei die Möglichkeit dazu geben, sofern die Klage noch nicht verfristet ist.
 Ob es gar eine Pflicht für die Schiedsgerichte gibt, Gelegenheit zur Nachbesserung zu geben, ist unklar.
-Das Landesschiedsgericht Bayern nimmmt dies jedenfalls dann an, wenn innerhalb der regulären Anrufungsfrist noch genügend Zeit verblieben ist\footnote{So in \cite[S.~2~f.]{LSGBYB413U}, in der Bestätigung der Entscheidung durch das Bundesschiedsgericht mit \cite{BSG314HA} weiter thematisiert.}, das Landesschiedsgericht Brandenburg nimmt dies wohl selbst dann an, wenn nur noch wenig Restfrist verblieben ist und setzt dann eine die Anrufungsfrist verlängernde Nachfrist.\footnote{So wohl jedenfalls in \cites[S.~7]{LSGBB133}{LSGBB134}.}
-Das Bundesschiedsgericht hat zumindest die Erfordernis einer die Anrufungsfrist verlängernden Nachfristsetzung verneint,\footnote{\cites[S.~2]{BSG2315HS}[S.~2]{BSG20130227}.} und auch ansonsten die verpflichtende Erfordernis einer Nachbesserungsaufforderung  nie angenommen und zumindest dann verneint, wenn eine Fristberechnung dem Schiedsgericht nicht möglich ist und es durch die Nachbesserungsaufforderung, die eine die Anrufungsfrist ersetzende neue Frist setzt, einer ansonsten verfristeten Anrufung zum Erfolg verhelfen könnte.\footnote{\cites{BSG3915HS}[S.~2]{BSG215HS}}.
+Das Landesschiedsgericht Bayern nimmmt dies jedenfalls dann an, wenn innerhalb der regulären Anrufungsfrist noch genügend Zeit verblieben ist,\footnote{So in \cite[S.~2~f.]{LSGBYB413U}, in der Bestätigung der Entscheidung durch das Bundesschiedsgericht mit \cite{BSG314HA} weiter thematisiert.} das Landesschiedsgericht Brandenburg nimmt dies wohl selbst dann an, wenn nur noch wenig Restfrist verblieben ist und setzt dann eine die Anrufungsfrist verlängernde Nachfrist.\footnote{So wohl jedenfalls in \cites[S.~7]{LSGBB133}{LSGBB134}.}
+Das Bundesschiedsgericht hat zumindest die Erfordernis einer die Anrufungsfrist verlängernden Nachfristsetzung verneint,\footnote{\cites[S.~2]{BSG2315HS}[S.~2]{BSG20130227}.} und auch ansonsten die verpflichtende Erfordernis einer Nachbesserungsaufforderung  nie angenommen und zumindest dann verneint, wenn eine Fristberechnung dem Schiedsgericht nicht möglich ist und es durch die Nachbesserungsaufforderung, die eine die Anrufungsfrist ersetzende neue Frist setzt, einer ansonsten verfristeten Anrufung zum Erfolg verhelfen könnte.\footnote{\cites{BSG3915HS}[S.~2]{BSG215HS}}
 
 \subsection{Nichteröffnungsbeschluss}
 \label{Anrufung:Beschluss:Nichteroeffnung}
@@ -331,12 +331,12 @@ Die Schiedsgerichtsordnung startet das Verfahren mit dem Eröffnungsbeschluss.
 Das heißt, ab diesem Moment entsteht ein Prozessrechtsverhältnis zwischen dem eröffnenden Schiedsgericht und den Verfahrensparteien nach den Verfahrensregeln der Schiedsgerichtsordnung.
 Dieses Verfahren kann grundsätzlich nur durch ein Urteil abgeschlossen werden, \S~12 Abs.~1 SGO\index[paridx]{SGO!12@\S~12!1@Abs.~1}.\footnote{So explizit auch schon \cite[S.~2]{BSG20131204}.}
 Das heißt auch, dass eine andere Beendigung dieses Prozessrechtsverhältnisses nicht zulässig ist.
-Ausnahmen stellen hier selbständige Verfahren im einstweiligen Rechtsschutz vor\footnote{Ausführlich zu Eigenständigkeit der Verfahren im einstweiligen Rechtsschutz \cite[S.~3]{LSGBB145} mit Verweis auf \cites[S.~4]{LSGHE20140423II} und die in \cites{BSG41114ES}{BSG3314EA} offensichtlich zum Ausdruck kommende Praxis des Bundesschiedsgerichtes, bestätigt von \cite[S.~2~f.]{BSG4214ESWiderspruch}.}, die mit der einstweiligen Anordnung begründet werden, da es dort keine Eröffnung gibt, und mit dem Widerspruchsurteil oder der Verfristung seiner Beantragung beendet werden.
+Ausnahmen stellen hier selbständige Verfahren im einstweiligen Rechtsschutz vor,\footnote{Ausführlich zu Eigenständigkeit der Verfahren im einstweiligen Rechtsschutz \cite[S.~3]{LSGBB145} mit Verweis auf \cites[S.~4]{LSGHE20140423II} und die in \cites{BSG41114ES}{BSG3314EA} offensichtlich zum Ausdruck kommende Praxis des Bundesschiedsgerichtes, bestätigt von \cite[S.~2~f.]{BSG4214ESWiderspruch}.} die mit der einstweiligen Anordnung begründet werden, da es dort keine Eröffnung gibt, und mit dem Widerspruchsurteil oder der Verfristung seiner Beantragung beendet werden.
 
 Allerdings gab es in der Rechtsprechung bisher schon Abweichungen von diesem Schema.
 Das Bundesschiedsgericht ist in jüngster Zeit von Rücknehmbarkeit eines Eröffnungsbeschlusses ausgeganen, wenn seine Anforderungen nicht mehr erfüllt sind oder es noch nie waren und wendet dahingehend \S~10 Abs.~1 SGO analog an.\footnote{So \cite{BSGPP100127862}, allerdings ist unklar, wie das Bundesschiedsgericht diese Analogie begründet. Schon das vorhandensein einer planwidrigen Regelungslücke ist äußerst fraglich, allerdings ist es auch problematisch, aus einer Regelung zur Füllung einer solchen planwidrigen Regelungslücke ihr Gegenteil anzunehmen. Zudem hat das Bundesschiedsgericht hier die Antragsbefugnis fehlerhaft für ein Statthaftigkeitskriterium gehalten und sie nicht, wie es korrekt wäre, als echtes Zulässigkeitskriterium behandelt.}
 
-In älterer Rechtsprechung war das Bundesschiedgericht daher der Überzeugung, dass eine solche Rücknahme nicht möglich ist, es sei denn, dass der Eröffnungsbeschluss schon explizit unter einem Vorbehalt bestehender aus einer mit einer Frist versehenen Nachbesserungsaufforderung getroffen wurde\footnote{\cite[S.~2]{BSG20130715} zu \cite{LSGNRW2013011}, in welchem das Bundesschiedsgericht einen solchen Vorbehalt erfüllt sah.}.
+In älterer Rechtsprechung war das Bundesschiedgericht daher der Überzeugung, dass eine solche Rücknahme nicht möglich ist, es sei denn, dass der Eröffnungsbeschluss schon explizit unter einem Vorbehalt bestehender aus einer mit einer Frist versehenen Nachbesserungsaufforderung getroffen wurde.\footnote{\cite[S.~2]{BSG20130715} zu \cite{LSGNRW2013011}, in welchem das Bundesschiedsgericht einen solchen Vorbehalt erfüllt sah.}
 
 Unter Anbetracht des Wortlauts der Schiedsgerichtsordnung ist die neuere Ansicht des Bundesschiedsgerichtes nicht haltbar.
 Es fehlt schlicht an der notwendigen planwidrigen Regelungslücke, die Vorraussetzung jeder Analogie ist.
@@ -347,7 +347,7 @@ Es bedarf daher schon gar keiner Analogie.
 \label{Anrufung:Verweisung}
 Einen Sonderfall der Anrufung stellt die Verfahrensverweisung nach \S~6 Abs.~5 SGO\index[paridx]{SGO!6@\S~6!5@Abs.~5} dar. Hier kommt es auf den Zustand des Verfahrens vor Verweisung an.
 
-Ist das Verfahren vor Verweisung noch nicht eröffnet gewesen, muss das Zielgericht über die Eröffnung entscheiden, als wäre es selbst angerufen. Dabei muss so vorgegangen werden, als wären die Anrufung statt an das Ursprungsgericht direkt an das Zielgericht gegangen. Dies ist insbesondere für die Berechnung der Anrufungsfristen relevant. Allerdings ist eine Verzögerung durch das Ursprungsgericht nicht der anrufenden Streitpartei zulasten zulegen.
+Ist das Verfahren vor Verweisung noch nicht eröffnet gewesen, muss das Zielgericht über die Eröffnung entscheiden, als wäre es selbst angerufen. Dabei muss so vorgegangen werden, als wären die Anrufung statt an das Ursprungsgericht direkt an das Zielgericht gegangen. Dies ist insbesondere für die Berechnung der Anrufungsfristen relevant. Allerdings ist eine Verzögerung durch das Ursprungsgericht nicht der anrufenden Streitpartei zulasten zu legen.
 
 Ist das Verfahren bereits vor Verweisung eröffnet gewesen, ist das Zielgericht an diese Entscheidung gebunden und muss das Verfahren entsprechend fortsetzen. Es sollte trotzdem analog zum Eröffnungsbeschluss ein Übernahmebeschluss getroffen werden und die Verfahrensübernahme den Streitparteien mitgeteilt werden. In dieser Übernahmemitteilung sollten den Parteien alle Mitteilungen gemacht werden, die sonst im Eröffnungsbeschluss getätigt werden (vgl. \ref{Anrufung:Beschluss:Eroeffnung}), um ein ordentliches Verfahren zu gewähren. Die Vorschriften über die Eröffnung sind dabei mangels eigener Regelung für die Verweisung analog anzuwenden.
 
